Add : user based authentication
